Try to fix some layout issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,7 +17,7 @@ body {
 }
 header {
     width:100%;
-    height: 120px;
+    height: 150px;
 }
 
 #logo {
@@ -290,7 +290,7 @@ header {
     font-size: 30px;
     margin-left: 20px;
  }
-#kid-courses h2 {
+#kid-div h2 {
     margin-left: 20px;
  }
 
